[Aman] : Added payment gateway and added pricing type while booking and fix the bugd int he notification, payment and booking service